<resources>
    <string name="app_name">GolfPal</string>
    <string name="action_settings">Settings</string>
    <string name="appHelp">This is the help screen for GolfPal</string>
    <string name="appDisplayName">GolfPal</string>
    <string name="appDesc">GolfPal provides the user with a quick and easy way to manage a list of courses and your favourite courses.</string>
    <string name="appMoreInfo">For more information about GolfPal or to provide feedback please visit our website.</string>
    <string name="appAbout">About GolfPal</string>
    <string name="appWebsite">golfpal.ie</string>
    <string name="developer">Developed by Cormac Dunphy</string>
    <string name="editTitle">Edit a Course</string>
    <string name="searchCoursesLbl">Search Courses</string>
    <string name="favouritesCourseLbl">Favourite Courses</string>
    <string name="addACourseLbl">Add A Course</string>
    <string name="favourites">favourites</string>
    <string name="map">map</string>
    <string name="courses">courses</string>
    <string name="courseName">Course Name</string>
    <string name="courseLocation">Course Location</string>
    <string name="coursePar">Course Par</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="addCourseBtnLbl">Add Course</string>
    <string name="updateCourseBtnLbl">Update Course</string>
    <string name="saveCourseBtn">Save Course</string>
    <string name="recentlyViewedLbl">Recently Added Courses</string>
    <string name="courseNameLbl">Name :</string>
    <string name="courseLocationLbl">Location :</string>
    <string name="courseParLbl">Par :</string>
    <string name="courseRatingLbl">Star Rating</string>
    <string name="courseDetailsLbl">Full Course Details</string>
    <string name="informationLbl">Information</string>
    <string name="emptyMessageLbl"></string>
    <string name="favTitle">Favourite Courses</string>
    <string name="removefavourite">Remove</string>
    <string name="updateName">Update Name</string>
    <string name="updateTitle">Update Course</string>
    <string name="updateLocation">Update Location</string>
    <string name="updatePar">Update Par</string>
    <string name="appHelp1">1. To add course to your list go to \'Course Check In\' and enter the course details.</string>
    <string name="appHelp2">2. To favourite a course press the icon to the left of course on the home page list.</string>
    <string name="appHelp3">3. To view your favourite courses click the favourite courses button.</string>
    <string name="appHelp4">4. To delete a course click the red icon to the right side of the course on the home page list.</string>
    <string name="apphelp5">5. To remove course from favourites press the red icon to the right of the course on the favourites list.</string>
    <string name="favEmptyList">You have no favourite courses yet!</string>
    <string name="title_activity_map">Map</string>
    <string name="checkIn">Check In At Course</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="golf">Golf</string>
    <string name="pal">Pal</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="capMap">Map</string>
    <string name="locationMarker">Add Marker To Map</string>
    <string name="selectACourse">Select A Course</string>
    <string name="or">Or</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="default_client_id">38842849059-ihlevlnb78dtsoelbueh10ptclbppm3e.apps.googleusercontent.com</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Log Out</string>
    <string name="userName">username</string>
    <string name="userEmail">user email</string>
    <string name="capFavourites">Favourites</string>
    <string name="capCourse">Courses</string>
</resources>
