<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cormac.golfpal.activities.AddCourse">

    <EditText
        android:id="@+id/addNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/courseName"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/addLocationET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/courseLocation"
        android:layout_below="@id/addNameET"
        android:layout_centerHorizontal="true"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/addParET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addLocationET"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/coursePar"
        android:inputType="numberDecimal" />

    <RatingBar
        android:id="@+id/addRatingBar"
        android:layout_width="242dp"
        android:layout_height="52dp"
        android:rating="1"
        android:stepSize="0.5"
        android:layout_below="@id/addParET"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/addCourseDoneButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGreen"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/colorFontWhite" />

    <CheckBox
        android:id="@+id/addLocationCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addNameET"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/addLocationET" />

    <ImageView
        android:id="@+id/addLocationImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/addLocationCB"
        android:layout_below="@id/addNameET"
        android:layout_marginTop="13dp"
        android:contentDescription="locationimage"
        android:src="@drawable/golf_ball_marker_green_32" />

    <TextView
        android:id="@+id/addSelectCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/selectACourse"
        android:textColor="@color/colorGrey"
        android:textSize="18sp" />

    <View
        android:id="@+id/addSelectLineLeft"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="14dp"
        android:layout_above="@id/addCourseListView"
        android:layout_toStartOf="@id/addSelectCourse"
        android:background="@color/colorGrey" />

    <View
        android:id="@+id/addSelectLineRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="14dp"
        android:layout_above="@id/addCourseListView"
        android:layout_toEndOf="@id/addSelectCourse"
        android:background="@color/colorGrey" />

    <!--<View-->
        <!--android:id="@+id/addLineBelowSelect"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@id/addSelectCourse"-->
        <!--android:background="@color/colorGrey" />-->

    <TextView
        android:id="@+id/addOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/addNameET"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorGrey"
        android:textSize="18sp" />

    <View
        android:id="@+id/addLineLeft"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/addNameET"
        android:layout_marginBottom="9sp"
        android:layout_toStartOf="@id/addOr"
        android:background="@color/colorGrey" />

    <View
        android:id="@+id/addLineRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/addNameET"
        android:layout_marginBottom="9sp"
        android:layout_toEndOf="@id/addOr"
        android:background="@color/colorGrey" />

    <ListView
        android:id="@+id/addCourseListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/addOr"
        android:layout_below="@id/addSelectCourse"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

</RelativeLayout>
