<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cormac.golfpal.activities.Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/homeCoursesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/courses"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorFontWhite"/>

                <Button
                    android:id="@+id/homeFavouriteCoursesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/favourites"
                    android:textColor="@color/colorFontWhite" />

            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/content_home" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_nav_drawer"
        app:headerLayout="@layout/nav_header">

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="@color/colorLightGreen"
            android:drawableLeft="@drawable/google"
            android:onClick="menuLogOut"
            android:paddingStart="20dp"
            android:text="@string/logout"
            android:textColor="@color/colorFontWhite" />
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
